--- a/.yabairc
+++ b/.yabairc
@@ -37,10 +37,10 @@ EVENTS_FOR_BAR=(
 for event in "${EVENTS_FOR_BAR[@]}"; do
   echo "registering $event for update_schetchybar"
 
-  # we patch $PATH so zx/node can be located by yabai
+  # patch $PATH so zx/node can be located by yabai
   yabai -m signal --add \
     event="$event" \
     label="update_sketchybar__${event}" \
-    action="echo 'event:' $event && export PATH=$PATH:/usr/local/bin:/opt/homebrew/bin/:/Users/YOUR_USER_NAME/Library/pnpm && flock -nE 0 /Users/YOUR_USER_NAME/.config/sketchybar/update_sketchybar.lock /Users/YOUR_USER_NAME/.config/sketchybar/update_sketchybar.mjs --quiet"
+    action="echo 'event:' $event && export PATH=$PATH:/usr/local/bin:/opt/homebrew/bin/:/Users/YOUR_USERNAME/Library/pnpm && flock -nE 0 /Users/YOUR_USERNAME/.config/sketchybar/update_sketchybar.lock /Users/YOUR_USERNAME/.config/sketchybar/update_sketchybar.mjs --quiet"
 done
-export PATH=$PATH:/usr/local/bin:/opt/homebrew/bin/:/Users/YOUR_USER_NAME/Library/pnpm && /Users/YOUR_USER_NAME/.config/sketchybar/update_sketchybar.mjs --quiet
+export PATH=$PATH:/usr/local/bin:/opt/homebrew/bin/:/Users/YOUR_USERNAME/Library/pnpm && /Users/YOUR_USERNAME/.config/sketchybar/update_sketchybar.mjs --quiet
